# dit-calendar

./: .gitignore  .travis.yml  ChangeLog.md  LICENSE  README.md  application.cfg  dit-calendar.cabal  happstack-test.cabal  k8s.yml  stack.yaml
dit-calendar-bot/: .gitignore  Dockerfile  Procfile  README.md  build.gradle.kts  pom.xml  settings.gradle
dit-calendar-bot/src/main/kotlin/com/ditcalendar/bot/: Bot.kt  CalendarCommand.kt  Config.kt  DitCalendarCommand.kt  DitCalendarService.kt  TelegramRoute.kt
dit-calendar-bot/src/main/kotlin/com/ditcalendar/bot/config/: Config.kt
dit-calendar-bot/src/main/kotlin/com/ditcalendar/bot/data/: CallbackRequest.kt  DitCalendar.kt  ResponseText.kt  Task.kt  TelegramLink.kt  TelegramResponse.kt  TelegramTaskAssignment.kt
dit-calendar-bot/src/main/kotlin/com/ditcalendar/bot/data/core/: Base.kt  DateSerializer.kt
dit-calendar-bot/src/main/kotlin/com/ditcalendar/bot/endpoint/: AuthEndpoint.kt  CalendarEndpoint.kt  TaskEndpoint.kt  TelegramAssignmentEndpoint.kt
dit-calendar-bot/src/main/kotlin/com/ditcalendar/bot/error/: DitBotError.kt
dit-calendar-bot/src/main/kotlin/com/ditcalendar/bot/formatter/: MarkdownFormatter.kt  StringFormatter.kt
dit-calendar-bot/src/main/kotlin/com/ditcalendar/bot/markdown/: MarkdownFormater.kt
dit-calendar-bot/src/main/kotlin/com/ditcalendar/bot/parsing/: MarkdownFormater.kt  StringParser.kt
dit-calendar-bot/src/main/kotlin/com/ditcalendar/bot/service/: DitCalendarService.kt  ServerDeploymentService.kt  TelegramService.kt
dit-calendar-bot/src/main/resources/: application.properties  config.properties
dit-calendar-client/: .gitignore  README.md  elm.json
dit-calendar-client/src/: Login.elm  Main.elm  index.html  styles.css
dit-calendar-client/src/Data/: CalendarEntry.elm  Login.elm  SimpleCalendarList.elm  Task.elm  UIMessages.elm
dit-calendar-client/src/Endpoint/: AuthEndpoint.elm  CalendarEntryEndpoint.elm  CalendarTaskEndpoint.elm  ResponseErrorDecoder.elm  TaskEndpoint.elm
dit-calendar-client/src/Endpoint/JsonParser/: AuthParser.elm  DateTimeDecoder.elm  ResponseErrorDecoder.elm  TaskParser.elm
dit-calendar-client/src/Endpoint/Service/: DateTimeDecoder.elm
dit-calendar-client/src/Env/: Serverurl.elm
dit-calendar-client/src/Page/: CalendarEntryDetails.elm  Login.elm  Quote.elm  Register.elm  SimpleCalendar.elm  SimpleCalendarList.elm  TaskDetail.elm
dit-calendar-client/src/env/: env.js
dit-calendar-client/tests/Page/: RegisterTest.elm
dit-calendar-server/: .gitignore  .travis.yml  ChangeLog.md  Dockerfile  README.md  application.cfg  cleanAfterDockerStop.sh  dit-calendar-server.cabal  dit-calendar.cabal  docker-compose-ssl.yml  docker-compose.yml  k8s.yml  stack.yaml
dit-calendar-server/config/: development.properties
dit-calendar-server/doc/: dit-calendar.postman_collection.json
dit-calendar-server/doc/dev/: start.textile
dit-calendar-server/doc/spec/: kurzbeschreibung.textile
dit-calendar-server/src/: Main.hs
dit-calendar-server/ssl/: localhost.key
dit-calendar-server/testsuite/: HLint.hs
dit-calendar-server/testsuite/Data/Repository/: CalendarRepoSpec.hs  PermissionSpec.hs  TaskRepoSpec.hs  UserRepoSpec.hs
dit-calendar-server/testsuite/Data/Repository/Acid/: CalendarSpec.hs  DataBaseHelper.hs  InterfaceAcidSpec.hs  UserSpec.hs
dit-calendar-server/testsuite/Data/Service/: CalendarEntrySpec.hs  CalendarTasksSpec.hs  TaskSpec.hs  TelegramAssignmentSpec.hs  TelegramTasksSpec.hs  UserSpec.hs  UserTasksSpec.hs
dit-calendar-ui/: ChangeLog.md  Dockerfile  README.md  elm.json  k8s.yml  nginx.conf
dit-calendar-ui/src/: Main.elm  ServerDeploy.elm  index.html
dit-calendar-ui/src/Data/: CalendarEntry.elm  Logout.elm  Register.elm  Task.elm
dit-calendar-ui/src/Endpoint/: AuthEndpoint.elm  CalendarEntryEndpoint.elm  CalendarTaskEndpoint.elm
dit-calendar-ui/src/Endpoint/JsonParser/: AuthParser.elm  CalendarEntryParser.elm  TaskParser.elm
dit-calendar-ui/src/Env/: Serverurl.elm
dit-calendar-ui/src/Page/: CalendarEntryDetails.elm  Login.elm  Logout.elm  SimpleCalendarList.elm  TaskDetail.elm
doc/dev/: start.textile  start.txt
doc/spec/: Rest-Interface.textile  Rest-Interface.txt  kurzbeschreibung.textile  kurzbeschreibung.txt
k8s/: Dockerfile  default.conf.template  nginx.conf
k8s/database/: dit-calendar-server-db.yml
k8s/deployment/: dit-calendar-server.yml  dit-calendar-ui.yml  ingress.yml
src/: AppMain.hs  Main.hs
src/Controller/: HomeController.hs  UserController.hs
src/Domain/: User.hs
src/Route/: PageEnum.hs  Routing.hs  User.hs
src/domain/: user.hs
src/route/: User.hs
testsuite/: HLint.hs  HappStackSpec.hs  HappStackTestSpec.hs
testsuite/Data/Repository/: CalendarRepoSpec.hs  TaskRepoSpec.hs  UserRepoSpec.hs
testsuite/Data/Repository/Acid/: CalendarAcidSpec.hs  DataBaseHelper.hs  InterfaceAcidSpec.hs  TaskAcidSpec.hs  UserAcidSpec.hs  UserSpec.hs
testsuite/Data/Service/: CalendarEntryServiceSpec.hs  CalendarEntrySpec.hs  TaskServiceSpec.hs  TaskSpec.hs  UserServiceSpec.hs  UserSpec.hs
testsuite/Domain/: UserSpec.hs
testsuite/Repository/: CalendarRepoSpec.hs  UserRepoSpec.hs
testsuite/Repository/Acid/: CalendarAcidSpec.hs  UserAcidSpec.hs
testsuite/Repository/Calendar/: CalendarEntryRepoSpec.hs  CalendarRepoSpec.hs
