name:                dit-calendar
version:             0.1.0.0
synopsis:            calendar for participatory projects
description:         The main goal for the calendar is to provide events entries, create tasks to be done for an event and allow a user-task assigment.
license:             GPL-3
license-file:        LICENSE
author:              Viktor Befort, Alex Befort
maintainer:          v.befort@googlemail.com
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/vitaB/dit-calendar

library
  default-language:    Haskell2010
  hs-source-dirs:      library
  Build-Tools:         happy >= 1.19
  exposed-modules:
                       Auth.Authorization,
                       Data.Domain.User,
                       Data.Domain.CalendarEntry,
                       Data.Domain.Task,
                       Data.Domain.Types,
                       Route.PageEnum,
                       Route.Routing,
                       Route.HttpService,
                       Controller.ResponseHelper,
                       Controller.HomeController,
                       Controller.UserController,
                       Controller.CalendarController,
                       Controller.TaskController,
                       Controller.AcidHelper,
                       Data.Repository.Acid.User,
                       Data.Repository.Acid.CalendarEntry,
                       Data.Repository.Acid.Task,
                       Data.Repository.Acid.InterfaceAcid,
                       Data.Repository.UserRepo,
                       Data.Repository.CalendarRepo,
                       Data.Repository.TaskRepo,
                       Data.Service.User,
                       Data.Service.CalendarEntry,
                       Data.Service.Task,
                       Conf,
                       AppStart
  build-depends:
                       base >=4.9 && <4.11,
                       mtl == 2.2.*,
                       ixset == 1.0.*,
                       filepath == 1.4.*,
                       acid-state == 0.14.*,
                       safecopy == 0.9.*,
                       happstack-server == 7.5.0.*,
                       happstack-server-tls == 7.1.6.*,
                       happstack-authenticate == 2.3.4.*,
                       happstack-foundation == 0.5.9.*,
                       web-routes == 0.27.*,
                       web-routes-th == 0.22.*,
                       web-routes-happstack == 0.23.*,
                       web-routes-boomerang == 0.28.*,
                       boomerang == 1.4.*,
                       text >=1.2 && <1.3,
                       transformers == 0.5.5.*,
                       bytestring == 0.10.8.*,
                       time == 1.6.0.*,
                       aeson == 1.2.4.*


executable dit-calendar
  main-is:             Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
  build-depends:       base >=4.9 && <4.11,
                       dit-calendar

test-suite hspec
  build-depends:
                       base >=4.9 && <4.11,
                       hspec >= 2.2,
                       test-fixture == 0.5.1.*,
                       directory == 1.3.*,
                       mtl == 2.2.*,
                       acid-state == 0.14.*,
                       ixset == 1.0.*,
                       time == 1.6.0.*,
                       dit-calendar
  default-language:    Haskell2010
  hs-source-dirs:      testsuite
  main-is:             Spec.hs
  type:                exitcode-stdio-1.0
  ghc-options:         -fno-warn-missing-fields

test-suite hlint
  build-depends:
                       base >=4.9 && <4.11,
                       hlint == 2.0.*,
                       dit-calendar
  default-language:    Haskell2010
  hs-source-dirs:      testsuite
  main-is:             HLint.hs
  type:                exitcode-stdio-1.0
