name:                dit-calendar-server
version:             0.7.0.0
synopsis:            calendar for participatory projects
description:         The main goal for the calendar is to provide events entries, create tasks to be done for an event and allow a user-task assigment.
license:             GPL-3
license-file:        LICENSE
author:              Viktor Befort, Alex Befort
maintainer:          v.befort@googlemail.com
category:            Web
build-type:          Simple
cabal-version:       >=2.0.0

source-repository head
  type:     git
  location: https://github.com/vitaB/dit-calendar

library
  default-language:    Haskell2010
  hs-source-dirs:      library
  Build-Tools:         happy >= 1.19
  ghc-options:         -fwarn-incomplete-patterns
  exposed-modules:
                       Auth.Authorization,
                       Data.Domain.User,
                       Data.Domain.CalendarEntry,
                       Data.Domain.Task,
                       Data.Domain.Types,
                       Data.Domain.TelegramLink,
                       Presentation.Route.PageEnum,
                       Presentation.Route.MainRouting,
                       Presentation.Route.UserRoute,
                       Presentation.Route.CalendarRoute,
                       Presentation.Route.TaskRoute,
                       Presentation.Controller.HomeController,
                       Presentation.Controller.LogoutController,
                       Presentation.Controller.UserController,
                       Presentation.Controller.CalendarController,
                       Presentation.Controller.TaskController,
                       Presentation.Controller.TelegramLinkController,
                       Presentation.Dto.CalendarEntry,
                       Presentation.Dto.User,
                       Presentation.Dto.Task,
                       Presentation.Dto.TelegramUserLink,
                       Presentation.Dto.CalendarFilter,
                       Presentation.Dto.TelegramTaskAssignment,
                       Presentation.Mapper.BaseMapper
                       Presentation.Mapper.CalendarEntryMapper,
                       Presentation.Mapper.UserMapper,
                       Presentation.Mapper.TaskMapper,
                       Presentation.Mapper.TelegramLinkMapper,
                       Presentation.Mapper.TelegramTaskAssignmentMapper,
                       Data.Repository.Acid.User,
                       Data.Repository.Acid.CalendarEntry,
                       Data.Repository.Acid.Task,
                       Data.Repository.Acid.TelegramLink,
                       Data.Repository.Acid.InterfaceAcid,
                       Data.Repository.UserRepo,
                       Data.Repository.CalendarRepo,
                       Data.Repository.TaskRepo,
                       Data.Repository.TelegramLinkRepo,
                       Data.Repository.PermissionControl,
                       Data.Service.User,
                       Data.Service.CalendarEntry,
                       Data.Service.Authorization,
                       Data.Service.Task,
                       Data.Service.CalendarTasks,
                       Data.Service.TelegramLink,
                       Data.Service.TelegramTasks,
                       Conf.Config,
                       Conf.AuthConf,
                       Server.AcidInitializer,
                       Server.HttpServerHelper,
                       Server.HappstackHelper,
                       Server.ResponseBuilder,
                       Server.DBState,
                       AppContext,
                       AppStart

  build-depends:
                       base >=4.9 && <4.13,
                       mtl == 2.2.*,
                       ixset == 1.1.1.1,
                       filepath == 1.4.*,
                       data-default == 0.7.1.*,
                       syb == 0.7,
                       conferer == 0.4.1.0,
                       acid-state == 0.16.0.1,
                       safecopy == 0.9.4.*,
                       happstack-server == 7.6.1,
                       happstack-authenticate == 2.4.0.3,
                       web-routes == 0.27.14.3,
                       web-routes-th == 0.22.6.6,
                       web-routes-happstack == 0.23.12,
                       web-routes-boomerang == 0.28.4.2,
                       boomerang == 1.4.6,
                       text == 1.2.3.1,
                       transformers == 0.5.6.2,
                       bytestring == 0.10.8.*,
                       time == 1.8.0.2,
                       aeson == 1.4.6.0


executable dit-calendar-server
  main-is:             Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
  build-depends:       base >=4.9 && <4.13,
                       dit-calendar-server

test-suite hspec
  build-depends:
                       base >=4.9 && <4.13,
                       HUnit,
                       hspec >= 2.2,
                       test-fixture == 0.5.1.*,
                       safecopy == 0.9.4.*,
                       data-default == 0.7.1.*,
                       directory == 1.3.3.0,
                       mtl == 2.2.*,
                       acid-state == 0.16.0.1,
                       ixset == 1.1.1.1,
                       time == 1.8.0.2,
                       happstack-server == 7.6.1,
                       text == 1.2.3.1,
                       dit-calendar-server
  default-language:    Haskell2010
  hs-source-dirs:      testsuite
  main-is:             Spec.hs
  type:                exitcode-stdio-1.0
  ghc-options:         -fno-warn-missing-fields

  other-modules:
                       Data.Repository.Acid.DataBaseHelper,
                       Data.Repository.Acid.InterfaceAcidSpec,
                       Data.Repository.Acid.UserSpec,
                       Data.Repository.Acid.CalendarSpec,
                       Data.Repository.CalendarRepoSpec,
                       Data.Repository.TaskRepoSpec,
                       Data.Repository.UserRepoSpec,
                       Data.Repository.PermissionSpec,
                       Data.Service.CalendarEntrySpec,
                       Data.Service.TaskSpec,
                       Data.Service.UserSpec,
                       Data.Service.CalendarTasksSpec,
                       Data.Service.TelegramTasksSpec

test-suite hlint
  build-depends:
                       base >=4.9 && <4.13,
                       hlint == 2.1.26,
                       dit-calendar-server
  default-language:    Haskell2010
  hs-source-dirs:      testsuite
  main-is:             HLint.hs
  type:                exitcode-stdio-1.0
