name:                dit-calendar
version:             0.5.0.0
synopsis:            calendar for participatory projects
description:         The main goal for the calendar is to provide events entries, create tasks to be done for an event and allow a user-task assigment.
license:             GPL-3
license-file:        LICENSE
author:              Viktor Befort, Alex Befort
maintainer:          v.befort@googlemail.com
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/vitaB/dit-calendar

library
  default-language:    Haskell2010
  hs-source-dirs:      library
  Build-Tools:         happy >= 1.19
  exposed-modules:
                       Auth.Authorization,
                       Data.Domain.User,
                       Data.Domain.CalendarEntry,
                       Data.Domain.Task,
                       Data.Domain.Types,
                       Presentation.Route.PageEnum,
                       Presentation.Route.MainRouting,
                       Presentation.Route.UserRoute,
                       Presentation.Route.CalendarRoute,
                       Presentation.Route.TaskRoute,
                       Presentation.Controller.HomeController,
                       Presentation.Controller.UserController,
                       Presentation.Controller.CalendarController,
                       Presentation.Controller.TaskController,
                       Presentation.Dto.CalendarEntry,
                       Presentation.Dto.User,
                       Presentation.Dto.Task,
                       Presentation.Mapper.BaseMapper
                       Presentation.Mapper.CalendarEntryMapper,
                       Presentation.Mapper.UserMapper,
                       Presentation.Mapper.TaskMapper,
                       Presentation.HttpServerHelper,
                       Presentation.ResponseHelper,
                       Data.Repository.Acid.User,
                       Data.Repository.Acid.CalendarEntry,
                       Data.Repository.Acid.Task,
                       Data.Repository.Acid.InterfaceAcid,
                       Data.Repository.UserRepo,
                       Data.Repository.CalendarRepo,
                       Data.Repository.TaskRepo,
                       Data.Service.User,
                       Data.Service.CalendarEntry,
                       Data.Service.Authorization,
                       Data.Service.Task,
                       Conf.Config,
                       Conf.AuthConf,
                       AcidHelper,
                       AppStart

  build-depends:
                       base >=4.9 && <4.11,
                       mtl == 2.2.*,
                       ixset == 1.1,
                       filepath == 1.4.*,
                       data-default == 0.7.1.*,
                       syb == 0.7,
                       config-ini == 0.2.2.0,
                       acid-state == 0.14.*,
                       safecopy == 0.9.4.*,
                       happstack-server == 7.5.2,
                       happstack-server-tls == 7.1.6.7,
                       happstack-authenticate == 2.4.0,
                       happstack-foundation == 0.5.9.1,
                       web-routes == 0.27.14.2,
                       web-routes-th == 0.22.6.4,
                       web-routes-happstack == 0.23.11,
                       web-routes-boomerang == 0.28.4.2,
                       boomerang == 1.4.5.5,
                       text >=1.2 && <1.3,
                       transformers == 0.5.6.2,
                       bytestring == 0.10.8.*,
                       time == 1.8.0.2,
                       aeson == 1.2.4.0


executable dit-calendar
  main-is:             Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
  build-depends:       base >=4.9 && <4.11,
                       dit-calendar

test-suite hspec
  build-depends:
                       base >=4.9 && <4.11,
                       HUnit,
                       hspec >= 2.2,
                       test-fixture == 0.5.1.*,
                       data-default == 0.7.1.*,
                       directory == 1.3.0.2,
                       mtl == 2.2.*,
                       acid-state == 0.14.*,
                       ixset == 1.1,
                       time == 1.8.0.2,
                       happstack-server == 7.5.2,
                       text >=1.2 && <1.3,
                       dit-calendar
  default-language:    Haskell2010
  hs-source-dirs:      testsuite
  main-is:             Spec.hs
  type:                exitcode-stdio-1.0
  ghc-options:         -fno-warn-missing-fields

  other-modules:
                       Data.Repository.Acid.DataBaseHelper,
                       Data.Repository.Acid.InterfaceAcidSpec,
                       Data.Repository.Acid.UserSpec,
                       Data.Repository.Acid.CalendarSpec,
                       Data.Repository.CalendarRepoSpec,
                       Data.Repository.TaskRepoSpec,
                       Data.Repository.UserRepoSpec,
                       Data.Service.CalendarEntrySpec,
                       Data.Service.TaskSpec,
                       Data.Service.UserSpec

test-suite hlint
  build-depends:
                       base >=4.9 && <4.11,
                       hlint == 2.1.10,
                       dit-calendar
  default-language:    Haskell2010
  hs-source-dirs:      testsuite
  main-is:             HLint.hs
  type:                exitcode-stdio-1.0
